# Video-2-Ascii

./: CMakeLists.txt  README.md
lib/ffmpeg/: CMakeLists.txt
src/: AsciiConverter.cpp  AsciiConverter.h  FontSystem.cpp  FontSystem.h  FrameParser.cpp  FrameParser.h  RenderText.cpp  RenderText.h  TFSS.glsl  TVSS.glsl  main.cpp
src/unused code/: ImageExtractor.cpp  ImageExtractor.h  Projector.cpp  Projector.h  load_frame.cpp  load_frame.h
